--- a/src/sass/base/_all.scss
+++ b/src/sass/base/_all.scss
@@ -34,23 +34,17 @@ html {
 
 html,
 body {
-	min-height: 100vh;
-	width: 100%;
 	font-family: "Open sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;
 	
 }
-body::-webkit-scrollbar { 
-	display: none; 
-}
+ body::-webkit-scrollbar { 
+ 	display: none; 
+ }
 body {
-  position: relative;
   background: $base-background;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   color: $base-white;
 }	
 a {
@@ -129,10 +123,8 @@ ul {
 .glimpse {
   z-index: 5;
   position: fixed;
-  min-width: 100vw;
-	min-height: 100vh;
-	max-width: 100%;
-	max-height: 100%;
+  width: 100vw;
+	height: 100vh;
   left: 0;
   top: 0;
   background: $darker-background;
@@ -170,8 +162,9 @@ ul {
 
 /* Header style */
 header {
-	 font-size: 5rem;
-	 width: 100%;
+
+	font-size: 5rem;
+	width: 100%;
  	
  
 }
@@ -272,10 +265,10 @@ footer {
   justify-content: space-between;
 	align-items: flex-end;
 	position: relative;
+	bottom:0;
   font-size: 4em;
 }
 small {
-	position: relative;
 	word-spacing: .4em;
   text-transform: capitalize;
 	font-size: .8rem;
@@ -290,7 +283,6 @@ small {
 /* Footer menu styles */
 
 footer #menu-media {
-	box-sizing: border-box;
   width: 4rem;
   height: 4rem;
   border-radius: 50%;
@@ -363,7 +355,12 @@ svg#media-circle{
 }
 
 /* Media Menu Items */
-
+nav#media-items{
+	position: absolute;
+	top: 0;
+	height: 100%;
+	width: 100%;
+}
 nav#media-items ul{
 	position: absolute;
 	font-size: 1rem;
@@ -374,13 +371,12 @@ nav#media-items ul{
 	transform: translate(0, -50%);
 
 	li{
-		
 		width: 180%;
 		position: absolute;
 		right: 60%;
 		line-height: 1rem;
 		transform-origin: 100% 50%;
-		opacity: 0;
+		opacity: 1;
 		
 		a{
 			padding: .6rem;	
@@ -401,9 +397,9 @@ nav#media-items ul{
 /* Responsive styles */
 @media (min-width: 1024){
 	header #logo-nav {
-		position: fixed;
+		//position: fixed;
 	}
 	header #menu-main{
-		position: fixed;
+		//position: fixed;
 	}
 }
