--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,9 +1,8 @@
 .row {
 	position: relative;
+	margin: 0 auto;
 	min-height: calc(100vh - 10rem);
   width: 100%;
-  display: flex;
-  flex-direction: column;
 }
 .row-bg{
 	background: $lighter-background;
@@ -216,8 +215,9 @@ body#about {
 	@media (min-width: 1024px) {
 		.row {
 			width: 95%;
+			display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      //justify-content: space-between;
 		}
 		.row-bg{
 			width: 0;
